apps/vikunja/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
  namespace: vikunja
spec:
  type: NodePort
  
  selector:
    app: production
    
  ports:
    # The web server
    - name: server
      port: 8448  # VIKU
      targetPort: 3456
      nodePort: 30006
      protocol: TCP
