apps/vikunja/route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vikunja-route
  namespace: vikunja
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`vikunja.bamilab.space`)
      kind: Rule
      services:
        - name: service
          port: 8448
